# rewind

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_record_and_scrub.py  02_replay_with_different_model.py
rewind/: __init__.py  cli.py  recorder.py  replay.py  storage.py  types.py
rewind/integrations/: __init__.py  anthropic.py  ollama.py  openai.py
rewind/ui/: __init__.py  scrub.py  summary.py
tests/: test_recorder.py  test_replay.py  test_storage.py
