[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewind"
version = "0.1.0"
description = "Chrome DevTools for AI agents — record, scrub, replay any agent run, locally."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "thechifura" }]
keywords = ["llm", "agents", "observability", "tracing", "anthropic", "openai", "ollama", "replay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.1"]
all = ["anthropic>=0.30", "openai>=1.0", "ollama>=0.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
rewind = "rewind.cli:main"

[project.urls]
Homepage = "https://github.com/vigilancetrent/rewind"
Repository = "https://github.com/vigilancetrent/rewind"
Issues = "https://github.com/vigilancetrent/rewind/issues"

[tool.hatch.build.targets.wheel]
packages = ["rewind"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
